--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "neitanod/forceutf8",
-    "homepage": "https://github.com/neitanod/forceutf8",
+    "name": "lukeusher/forceutf8",
+    "homepage": "https://github.com/LukeUsher/forceutf8",
     "license": "BSD-3-Clause",
     "type": "library",
     "description": "PHP Class Encoding featuring popular Encoding::toUTF8() function --formerly known as forceUTF8()-- that fixes mixed encoded strings.",
@@ -8,6 +8,10 @@
         "php": ">=5.3.0"
     },
     "authors": [
+        {
+            "name":  "Luke Usher",
+            "email": "luke@usher.cc"
+        },
         {
             "name":  "Sebastián Grignoli",
             "email": "grignoli@gmail.com"
