--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "lukeusher/forceutf8",
-    "homepage": "https://github.com/LukeUsher/forceutf8",
+    "name": "passport-it/forceutf8",
+    "homepage": "https://github.com/Passport-IT/forceutf8",
     "license": "BSD-3-Clause",
     "type": "library",
     "description": "PHP Class Encoding featuring popular Encoding::toUTF8() function --formerly known as forceUTF8()-- that fixes mixed encoded strings.",
